<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar style="@style/ToolbarDialog">

        <TextView
            android:id="@+id/text_view_calendar_title"
            style="@style/ToolbarTextDialog"
            android:text="@string/calendar" />
    </android.support.v7.widget.Toolbar>

    <DatePicker
        android:id="@+id/date_picker_update_birthday"
        style="@android:style/Theme.Holo.Light.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"></DatePicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_button_top"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel_update_birthday"
            style="@style/ButtonDialogUpdate"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/button_add_update_birthday"
            style="@style/ButtonDialogUpdate"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>