<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar style="@style/ToolbarDialog">

        <TextView
            android:id="@+id/text_view_toolbar_size_info"
            style="@style/ToolbarTextDialog"
            android:text="@string/size" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_info_height"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_size_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/answer_what_is_it"
            android:textSize="26dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_button_top"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_close_size_info"
            style="@style/ButtonDialog"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>