<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/text_view_dialog_person_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_number"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/number_picker_person_size_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_button_top"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel_update_size"
            style="@style/ButtonDialogUpdate"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/button_add_update_size"
            style="@style/ButtonDialogUpdate"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>