<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_recycler_person"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="@dimen/cardview_margin"
        android:layout_marginRight="@dimen/cardview_margin"
        android:layout_marginTop="@dimen/cardview_margin"
        card:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_card_view_person"
                android:layout_width="@dimen/button_weigth"
                android:layout_height="@dimen/button_height"
                android:layout_centerVertical="true"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/text_view_card_person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/image_card_view_person"
                android:text="@string/name_girl"
                android:textSize="12pt" />

            <TextView
                android:id="@+id/text_view_card_person_day"
                style="@style/RobotoTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/day_person"
                android:textColor="@color/colorAccent"
                android:textSize="6pt" />

            <TextView
                android:id="@+id/text_view_card_person_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_card_person_name"
                android:layout_toRightOf="@id/image_card_view_person"
                android:text="@string/type_person"
                android:textAllCaps="true"
                android:textColor="@color/text_color_opacity"
                android:textSize="7pt" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_card_person_test"
                android:layout_width="@dimen/button_card_weigth_test"
                android:layout_height="@dimen/button_card_weigth"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/colorAccent"
                android:text="@string/test"
                android:textColor="@color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.v7.widget.LinearLayoutCompat>