<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="g.girl.view.activity.TestActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
                android:paddingTop="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_calendar"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/TextColor"
                android:id="@+id/edit_text_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/write_birthday" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_calendar"
            android:layout_marginTop="10pt">

            <EditText
                style="@style/TextColor"
                android:id="@+id/edit_text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/write_height" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_shoe_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_height"
            android:layout_marginTop="10pt">

            <EditText
                style="@style/TextColor"
                android:id="@+id/edit_text_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/write_shoe_size" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_stomach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_shoe_size"
            android:layout_marginTop="10pt">

            <EditText
                style="@style/TextColor"
                android:id="@+id/edit_text_ring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/write_stomach" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_hips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_input_layout_stomach"
            android:layout_marginTop="10pt">

            <EditText
                style="@style/TextColor"
                android:id="@+id/edit_text_clothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/write_hips" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button_person_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_symbol"
        app:layout_anchorGravity="bottom|right|end" />

    <include
        android:id="@+id/toolbar_person"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/button_back_pressed_test"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
</android.support.design.widget.CoordinatorLayout>