<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="g.girl.view.activity.UserActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/user_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="center_horizontal|bottom"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_person_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_mother"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <Button
                    android:id="@+id/button_back_pressed_user"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_keyboard_arrow_left_black_24dp" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_birthday_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:lineSpacingExtra="8dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/birthday"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/card_view_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/text_view_birthday_user"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_height_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_birthday_user"
                    android:lineSpacingExtra="8dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/write_height"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_view_shoe_size_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_birthday_user"
                    android:lineSpacingExtra="8dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/write_shoe_size"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_view_stomach_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_birthday_user"
                    android:lineSpacingExtra="8dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/write_stomach"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_view_hips_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_birthday_user"
                    android:lineSpacingExtra="8dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/write_hips"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_view_size"
                android:layout_marginLeft="10dp"
                android:text="@string/like"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/liner_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/like"
                android:background="@color/liner_background"
                android:paddingTop="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_answer_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <TextView
                android:id="@+id/dislike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner_like"
                android:layout_marginLeft="10dp"
                android:text="@string/dislike"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dislike"
                android:background="@color/liner_background"
                android:paddingTop="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_answer_dislike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_pencil_white"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>
